test: keep DROP assertions Java 11 compatible